<resources>
    <string name="app_name">ShopFood</string>
    <string name="food_runs">Food Runs</string>

    <string name="title_onboarding">Select the Favorities Menu</string>
    <string name="title_onboarding2">Good food at a cheap price</string>
    <string name="content_onboarding">Now eat well, don\'t leave the house,You can</string>
    <string name="content_onboarding1">choose your favorite food only with</string>
    <string name="content_onboarding2">one click</string>
    <string name="content1_onboarding">You can eat at expensive</string>
    <string name="content1_onboarding1">restaurants with</string>
    <string name="content1_onboarding2">affordable price</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="fullName">Full name</string>
    <string name="email">Email address</string>
    <string name="pass">Password</string>
    <string name="btnGG">Sign up with Google</string>
    <string name="forPass">Forget Password?</string>
    <string name="content_main">Freedom way, Lekki phase</string>
    <string name="seeAll">See All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_oder">OderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>