<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.OnboardingFragment">
    <ImageView
        android:id="@+id/imageView5555"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/food_runs"
        app:srcCompat="@drawable/backgroud_welcome" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="408.5dp"
        android:layout_height="390.22dp"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-20dp"
        android:contentDescription="@string/food_runs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding_2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:layout_marginTop="39dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_onboarding2"
            android:gravity="center"
            android:fontFamily="@font/red_hat_display_bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/content1_onboarding"
                android:fontFamily="@font/red_hat_display_medium"
                android:textColor="@color/conten_onboarding"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/content1_onboarding1"
                android:fontFamily="@font/red_hat_display_medium"
                android:textColor="@color/conten_onboarding"
                android:textSize="14sp"
                android:layout_margin="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/content1_onboarding2"
                android:fontFamily="@font/red_hat_display_medium"
                android:textColor="@color/conten_onboarding"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>